# DESIGNER_LORA

./: .gitignore  CLAUDE.md  FORGE_INTEGRATION.md  README.md  ROADMAP.md  constraints-a1111.txt  grokkie_batch.py  grokkie_canvas.py  grokkie_config.py  grokkie_dataset_factory.py  grokkie_playground.py  grokkie_presets.py  grokkie_redresser.py  grokkie_weight_engine.py  grokkie_weight_sliders.py  pyproject.toml  spookums.toml
lora_studio/: __init__.py  base_models.py  batch_variations.py  builder.py  cli.py  concept_control.py  concept_metadata.py  config.py  crop.py  extract.py  identity_integration.py  insights.py  lora_explorer.py  maintenance.py  manifest.py  merge.py  mergeforge.py  packager.py  pipeline_dag.py  qa_render.py  registry.py  runtime.py  stack_intelligence.py  stack_workflow.py  starter_stacks.py  study.py  sweep.py  util.py  wardrobe.py  wizard.py
lora_studio/caption/: __init__.py  wd14.py
lora_studio/curate/: __init__.py  basic.py  diversity.py  smart.py
lora_studio/eval/: __init__.py  forge_api.py  matrix.py  pipeline.py
lora_studio/train/: __init__.py  kohya.py  preset_recommender.py  presets.py
lora_studio/ui/: __init__.py  server.py
tests/: helpers.py  test_concept.py  test_hub.py  test_mergeforge.py  test_phase2.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_pipeline.py  test_preset_recommender.py  test_runtime.py  test_study.py  test_sweep_factory.py  test_wardrobe.py  test_wizard.py
